tests/lex-fail/unicode_chr_cp.fl.0.exp
Error: unicode_chr_cp.fl(1,3): Unicode escape sequence contains invalid code point: 99009900 
'\u99009900'
  ^          
